# Face-Recogniser

./: .gitignore  CMakeLists.txt  vcpkg.json  xmake.lua
.github/workflows/: build.yml
src/: main.cpp
